
### Runtime system:

- #10403, #12202: introduce `caml_ext_table_add_noexc` that does not
  raise `Out_of_memory` exceptions and use it inside the blocking sections
  of `caml_read_directory`.  Also, check for overflows in ext table sizes.
  (Xavier Leroy, report by Arseniy Alekseyev, review by Gabriel Scherer)

### Code generation and optimizations:

### Standard library:

### Other libraries:

- #12213: Dynlink library, improve legibility of error messages
  (Samuel Hym, review by Gabriel Scherer and Nicolás Ojeda Bär)

### Tools:

- #12185: New script language for ocamltest.
  (Damien Doligez with Florian Angeletti, Sébastien Hinderer, Gabriel Scherer,
   review by Sébastien Hinderer and Gabriel Scherer)

### Manual and documentation:

### Compiler user-interface and warnings:

### Internal/compiler-libs changes:

### Build system:

### Bug fixes:


OCaml 5.1.0
---------------

### Language features:

- #9975, #11365: Make empty types (`type t = |`) immediate.
  (Antal Spector-Zabusky, review by Gabriel Scherer)

* #11694: Add short syntax for generative functor types `() -> ...`
  (Jeremy Yallop, review by Gabriel Scherer, Nicolás Ojeda Bär,
  Jacques Garrigue)

- #11457: Remove old polymorphic variant syntax.
  With ``type t = [ `A | `B ]``, one could use the syntax `#t` in types,
  where it means the same thing as `[< t]`, and in patterns, where it means
  ``(`A | `B)``. The use of `#t` in types for polymorphic variants
  was deprecated since 2001, and is now removed. The syntax remains available
  in patterns, or for objects -- when `t` is a class type.
  (Stefan Muenzel, review by Gabriel Scherer and Jacques Garrigue)

- #11984: Add dedicated syntax for generative functor application.
  Previously, OCaml did not disinguish between `F ()` and
  `F (struct end)`, even though the latter looks applicative. Instead,
  the decision between generative and applicative functor application
  was made based on the type of `F`. With this patch, we now distinguish