@@ -418,6 +418,14 @@ let stable_sort cmp a =
 
 let fast_sort = stable_sort
 
+let shuffle ~rand a = (* Fisher-Yates *)
+  for i = length a - 1 downto 1 do
+    let j = rand (i + 1) in
+    let v = unsafe_get a i in
+    unsafe_set a i (unsafe_get a j);
+    unsafe_set a j v
+  done
+
 (** {1 Iterators} *)
 
 let to_seq a =
