@@ -682,7 +682,7 @@ module Array : sig
 
      @since 5.1 *)
 
-  (** {1 Sorting} *)
+  (** {1:sorting_and_shuffling Sorting and shuffling} *)
 
   val sort : (float -> float -> int) -> t -> unit
   (** Sort a floatarray in increasing order according to a comparison
@@ -721,6 +721,18 @@ module Array : sig
   val fast_sort : (float -> float -> int) -> t -> unit
   (** Same as {!sort} or {!stable_sort}, whichever is faster
       on typical input. *)
+
+  val shuffle :
+    rand: (* thwart tools/sync_stdlib_docs *) (int -> int) -> t -> unit
+  (** [shuffle rand a] randomly permutes [a]'s elements using [rand]
+      for randomness.
+
+      [rand] must be such that a call to [rand n] returns a uniformly
+      distributed random number in the range \[[0];[n-1]\].
+      {!Random.int} can be used for this (do not forget to
+      {{!Random.self_init}initialize} the generator).
+
+      @since 5.2 *)
 
   (** {1 Float arrays and Sequences} *)
 
@@ -1016,7 +1028,7 @@ module ArrayLabels : sig
 
      @since 5.1 *)
 
-  (** {1 Sorting} *)
+  (** {1:sorting_and_shuffling Sorting and shuffling} *)
 
   val sort : cmp:(float -> float -> int) -> t -> unit
   (** Sort a floatarray in increasing order according to a comparison
@@ -1055,6 +1067,18 @@ module ArrayLabels : sig
   val fast_sort : cmp:(float -> float -> int) -> t -> unit
   (** Same as {!sort} or {!stable_sort}, whichever is faster
       on typical input. *)
+
+  val shuffle :
+    rand: (* thwart tools/sync_stdlib_docs *) (int -> int) -> t -> unit
+  (** [shuffle ~rand a] randomly permutes [a]'s elements using [rand]
+      for randomness.
+
+      [rand] must be such that a call to [rand n] returns a uniformly
+      distributed random number in the range \[[0];[n-1]\].
+      {!Random.int} can be used for this (do not forget to
+      {{!Random.self_init}initialize} the generator).
+
+      @since 5.2 *)
 
   (** {1 Float arrays and Sequences} *)
 
